@@ -2,6 +2,7 @@
 v4.2.19-git
 -----------
 
+[jan] Split shared users by linebreaks too.
 
 
 -------
